added a general class Model for DatabaseReader, Student inherits from Model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project (DatabaseProject)
 
 set(CMAKE_CXX_STANDARD 20)
 
-set(SOURCE_FILES DatabaseProject.cpp FileManager.cpp FileManager.h DatabaseReader.cpp DatabaseReader.h Student.cpp Student.h database.csv)
+set(SOURCE_FILES DatabaseProject.cpp FileManager.cpp FileManager.h DatabaseReader.cpp DatabaseReader.h Student.cpp Student.h database.csv Model.cpp Model.h)
 
 add_executable(DatabaseProject ${SOURCE_FILES})
